2004-06-26  Carl Hetherington  <inkscape@carlh.net>

	* src/node-context.cpp: make sure nodepath->nodeContext is set up
	when the selection changes.  Fixes 936739.


2004-06-25  MenTaLguY  <mental@rydia.net>

	* src/display/sp-canvas.cpp: enabled win32 current item workaround on
  	  all platforms

2004-06-25  Kees Cook  <kees@outflux.net>

	* src/dialogs/rdf.h, src/dialogs/rdf.cpp, src/dialogs/Makefile_insert,
      src/dialogs/desktop-properties.cpp:

	  Added data entry widgets for document metadata, including a rough
	  license selector, and debug rdf generator.  Corrected whitespace,
	  added table for RDF entity lookup, tag, and title mapping.  Added
	  initial loading framework.  Cleaned up rdf_work_entity_t usage.

2004-06-25  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-namedview.cpp: cleanups in grid snap settings.  Fix a
	typo.

	* src/seltrans.cpp: optional default origin for scaling.  Fixes
	to snap during scale.

	* src/seltrans.h: s/opposit/opposite/.  Add some comments.

	* src/dialogs/display-settings.cpp: add default scale origin
	option.

	* src/desktop-snap.h: changes to snap_list_scale prototype.

	* src/desktop-snap.cpp: snap_list_scale now returns whether
	it snapped or not.  The best scale snap is now the one that
	changes the scale factor least, rather than the one that
	results in the snap point being closest to where it used to be.

	* src/display/sp-canvas.cpp: fix for win32 freeze-at-border bug,
	copied from SP.

	* src/knot.cpp, src/select-context.cpp: change spellings from
	British to American English for translators.
	
2004-06-24  rejon <kidproto@users.sf.net>

	* src/verbs.cpp: I changed the reverse command to be more verbose and 
	  explanative.

2004-06-24  MenTaLguY  <mental@rydia.net>

	* src/seltrans.cpp: slight change to make showing/hiding center
	  mark easier later on

	* configure.in, src/main.cpp, src/star-context.cpp,
	  src/display/bezier-utils.cpp, src/display/canvas-bpath.cpp,