@@ -1,8 +1,11 @@
+2004-06-26  MenTaLguY  <mental@rydia.net>
+
+	* src/refcounted.h: allow reffing/unreffing const objects
+
 2004-06-26  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/node-context.cpp: make sure nodepath->nodeContext is set up
 	when the selection changes.  Fixes 936739.
-
 
 2004-06-25  MenTaLguY  <mental@rydia.net>
 
